--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
-body {
-  background: blue;
+#heading {
+  background: rgba(0, 0, 255, .5);
+  padding: 10px 0px 10px 0px;
+  text-align: center;
 }
