--- a/style.css
+++ b/style.css
@@ -3,3 +3,10 @@
   padding: 10px 0px 10px 0px;
   text-align: center;
 }
+
+#content {
+  border-radius: 25px;
+  border: 5px solid #000;
+  padding: 20px;
+  text-align: center;
+}
