--- a/style.css
+++ b/style.css
@@ -22,9 +22,29 @@ body {
   white-space: nowrap;
 }
 
-#content {
+button {
+  font-size: 20px;
+  padding: 5px;
+  margin-top: 10px;
+}
+
+#first-button {
+  background-color: blue;
+  border: 2px solid white;
   border-radius: 25px;
-  border: 5px solid #000;
+  color: white;
+}
+
+.second-button-set {
+  background-color: lightgreen;
+}
+
+.button-row {
+  display: inline-block;
+}
+
+#content {
+  border: none;
   padding: 20px;
   text-align: center;
 }
